Solve problem dark mode slider

--- a/src/app/solve-problem/solve-problem.component.css
+++ b/src/app/solve-problem/solve-problem.component.css
@@ -20,6 +20,13 @@
     font-size: x-large;
 }
 
+.dark-mode-toggle {
+    display: inline-block;
+    float: right;
+    margin: 0;
+    padding: 6px;
+}
+
 .section-header {
     font-weight: bold;
     font-size: large;
